Solved the challenge

--- a/UITableViewController Challenge Solution/Base.lproj/Main.storyboard
+++ b/UITableViewController Challenge Solution/Base.lproj/Main.storyboard
@@ -7,13 +7,13 @@
         <!--Table View Controller-->
         <scene sceneID="nfJ-Ep-r5a">
             <objects>
-                <tableViewController id="Ryu-hT-QGA" sceneMemberID="viewController">
+                <tableViewController id="Ryu-hT-QGA" customClass="PMPTableViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="iv6-pP-CkL">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="awS-Wd-6ia">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="awS-Wd-6ia">
                                 <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="awS-Wd-6ia" id="JmQ-Qz-NKT">
